--- a/modeling-01.qmd
+++ b/modeling-01.qmd
@@ -89,7 +89,7 @@ We can do more if we make a prediction, but, first, let's save the model to file
 In this tutorial we are going to build three types of models: basic, monthly and split (between testing and training).  We should organize the storage of the models in a way that makes sense. With each model we may generate one or more predictions - for example, for our basic model we might tyr to hind-cast a individual years.  That's a one-to-many to relationship between model and predictions.  We suggest that you start considering each model a version and store them accordingly.  Let's use a simple numbering scheme...
 
  + `v1.0` for the basic model
- + `v2.01, v2.01, ..., v2.12` for the monthly models
+ + `v2.jan, v2.feb, ..., v2.dec` for the monthly models
  + `v3.0, ...` for for the split model(s)
  
 The [maxnetic](https://github.com/BigelowLab/maxnetic) provides some convenience functions for working with maxnet models including file storage functions.
