--- a/modeling-02.qmd
+++ b/modeling-02.qmd
@@ -3,7 +3,7 @@ title: "Modeling each month"
 cache: true
 ---
 
-Here we modify our first modeling workflow to produce a model for each month. In the [previous workflow](modeling-01.html) we produced one model covering observations covering all times; we then applied the model to the various months. 
+Here we modify our first modeling workflow to produce a model for each month. In the [previous workflow](modeling-01.qmd) we produced one model covering observations covering all times; we then applied the model to the various months. 
 
 ## Load data
 
@@ -26,7 +26,7 @@ bkg = sf::read_sf(file.path("data", "bkg", "bkg-covariates.gpkg")) |>
 Let's do a quick check by counting each by month. Note that we drop the spatial info so that we can make simply tallies.
 
 ```{r}
-sf::st_drop_geometry(obs) |> 
+counts = sf::st_drop_geometry(obs) |> 
   dplyr::count(month, name = "n_obs") |>
   dplyr::left_join(sf::st_drop_geometry(bkg) |> dplyr::count(month, name = "n_bkg"), 
                    by = 'month') |>
@@ -124,12 +124,12 @@ Now we can iterate through the months.
 
 ```{r}
 date_sequence = seq(from = dates[1], to = dates[2], by = "month")
-preds = lapply(names(models),
+pred_rasters = lapply(names(models),
   function(mon){
     ix = which(month.abb %in% mon)
     predict(models[[mon]], dplyr::slice(x, time, ix, drop), type = "cloglog")
   }) 
-preds = do.call(c, append(preds, list(along = list(time = date_sequence))))
+pred_rasters = do.call(c, append(pred_rasters, list(along = list(time = date_sequence))))
 ```
 
 Let's plot them.
@@ -137,12 +137,52 @@ Let's plot them.
 ```{r}
 coast = rnaturalearth::ne_coastline(scale = 'large', returnclass = 'sf') |>
   sf::st_geometry() |>
-  sf::st_crop(preds)
+  sf::st_crop(pred_rasters)
 
 plot_coast = function() {
   plot(coast, col = 'green', add = TRUE)
 }
-plot(preds |> st_to_180(), hook = plot_coast)
+plot(pred_rasters |> st_to_180(), hook = plot_coast)
 ```
 
+Let's see what we can discern from the predict abilities. We can extract the predicted values at the observed locations.
 
+
+
+```{r}
+pred_obs = stars::st_extract(pred_rasters, 
+                             dplyr::filter(obs, dplyr::between(date, dates[1], dates[2])),
+                             time_column = "month_id") |>
+  sf::st_drop_geometry() 
+pred_bkg = stars::st_extract(pred_rasters, 
+                             dplyr::filter(bkg, dplyr::between(date, dates[1], dates[2])),
+                             time_column = "month_id") |>
+  sf::st_drop_geometry() 
+
+preds = dplyr::bind_rows(pred_obs, pred_bkg) |>
+  dplyr::mutate(label = c(rep(1, nrow(pred_obs)), rep(0, nrow(pred_bkg))), .before = 1) |>
+  dplyr::mutate(month = factor(format(time, "%b"), levels = month.abb)) |>
+  dplyr::group_by(month)
+
+
+aucs = dplyr::group_map(preds,
+                        function(x, y) {
+                          dplyr::tibble(month = y$month, auc = maxnetic::AUC(x))
+                        }) |>
+  dplyr::bind_rows() |>
+  dplyr::right_join(counts, by = "month") |>
+  print(n=12)
+```
+
+OK, that's unexpected.  The months with the lower counts of observations have relatively higher AUCs.  Huh?  Let's look at that graphically.
+
+```{r}
+aucs_long = tidyr::pivot_longer(aucs, dplyr::all_of(c("n_obs", "n_bkg")),
+                           names_to = "type", values_to = "count") |>
+  dplyr::mutate(type = dplyr::recode(type, n_obs = "obs", n_bkg = "bkg"))
+
+ggplot2::ggplot(data = aucs_long, aes(x = count, y = auc, color = type)) +
+  ggplot2::geom_point() + 
+  ggplot2::geom_smooth(method='lm', formula= y~x)
+```
+Surprised?  Could this be overfitting resulting from sampling background in time weighted to the months when we have observations?  Hmmmm.
